--- a/_config.yml
+++ b/_config.yml
@@ -92,16 +92,16 @@ feed_show_tags: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
-page-col: "#FFFFFF"
-text-col: "#404040"
+navbar-col: "#394867"
+navbar-text-col: "#f1f6f9"
+navbar-border-col: "#394867"
+page-col: "#14274e"
+text-col: "#f1f6f9"
 link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#EAEAEA"
+hover-col: "#1f6f8b"
+footer-col: "#394867"
 footer-text-col: "#777777"
-footer-link-col: "#404040"
+footer-link-col: "#f1f6f9"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
