--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
+  email: "someone@example.com"
   github: ziko-e
   youtube: c/
 #  medium: yourname
@@ -47,7 +48,7 @@ social-network-links:
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
 #  instagram: deanat78
-   spotify: yourname
+#  spotify: yourname
 #  telephone: +14159998888
 #  steam: deanat78
 #  twitch: yourname
